<resources>
    <string name="app_name">INCIDENT TRACKING</string>
    <string name="title_activity_barra_lateral">barraLateral</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_welcome_title">Bienvenido!</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_cerrar">Cerrar Sesion</string>

    <string name="default_web_client_id">281614136749-q1dhi52e83qoqtt8e1lrep83soj527i0.apps.googleusercontent.com</string>

    <string name="menu_principal">Principal</string>
    <string name="menu_profesor">Profesores</string>
    <string name="menu_estudiante">Estudiantes</string>
    <string name="menu_tutores">Tutores</string>
    <string name="menu_incidencia">Incidencias</string>
    <string name="menu_tutoria">Tutoria</string>
    <string name="menu_reporte">Reporte</string>
    <string-array name="grados_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="secciones_array">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
    </string-array>


    //Estudiantes
    <string name="btn_aceptar">Aceptar</string>
    <string name="action_bottom">Añadir estudiante</string>
    <string name="hint_name">Nombres</string>
    <string name="hint_lastName">Apellidos</string>
    <string name="hint_phone">Telefono</string>
    <string name="hint_degree">Grado</string>
    <string name="hint_section">Seccion</string>
    <string name="hint_DNI">DNI</string>
    <string name="hint_date_of_birth">Fecha de nacimiento</string>
    <string name="hint_gravedad">Gravedad</string>
    <string name="hint_estudiante">Estudiante</string>
    <string name="hint_grado">Grado</string>
    <string name="hint_seccion">Seccion</string>
    <string name="hint_estado">Estado</string>
    <string name="hint_tipo">Tipo</string>
    <string name="hint_detalle">Detalle</string>
    <string name="hint_evidencia">Evidencia</string>
    <string name="hint_registrar_incidencia">Registrar Incidencia</string>
    <string name="hint_fecha">Fecha del reporte</string>
    <string name="hint_seleccionar">Seleccionar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="desc_select_button">Selecciones el boton</string>
    <string name="desc_tutor_image">Imagen tutor</string>






    <string-array name="item_fecha_tutoria">
        <item>Todos</item>
        <item>Hoy</item>
        <item>Ultimos 7 dias</item>
        <item>Este mes</item>
        <item>Este año</item>
    </string-array>
    <dimen name="margin_small">12dp</dimen>
    <dimen name="margin_medium">16dp</dimen>
    <dimen name="margin_large">24dp</dimen>
    <dimen name="padding_small">8dp</dimen>
    <dimen name="padding_medium">16dp</dimen>
    <dimen name="text_size_small">12sp</dimen>
    <dimen name="text_size_medium">14sp</dimen>
    <dimen name="text_size_large">18sp</dimen>



    <string name="authentication_failed_message">No se pudo autenticar el usuario. Intenta de nuevo.</string>
    <string name="firestore_error_message">Error al consultar la base de datos. Por favor, intenta de nuevo.</string>
    <string name="empty_fields_message">Por favor, ingrese todos los campos.</string>
    <string name="user_not_found_message">Usuario no registrado</string>
        <string name="invalid_credentials_message">Credenciales inválidas. Verifique el correo electrónico y la contraseña.</string>
        <string name="invalid_user_message">Usuario no registrado. Verifique el correo electrónico.</string>
        <string name="sign_in_error_message">Error al iniciar sesión. Inténtelo de nuevo.</string>
        <string name="sign_out_message">Acceso restringido. Inténtelo de nuevo.</string>




</resources>