<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:background="@drawable/background_circle"
        app:srcCompat="@drawable/icon_colegio_parroquial" />

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/montserrat"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_welcome_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/Primary_blue_black" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/Primary_blue_black"
        android:text="@string/nav_header_subtitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

</LinearLayout>
