<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_primary_blue"
    android:padding="10dp"
    tools:context=".ui.Estudiante.AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="0dp"></ImageView>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="20sp" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"></ImageView>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="20sp" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"></ImageView>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="20sp" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"></ImageView>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="20sp" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"></ImageView>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="20sp" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"></ImageView>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="20sp" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"></ImageView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="150dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/Transparent_color"
                android:hint="@string/hint_name"
                android:textColor="@color/Primary_white"
                android:textColorHint="@color/Primary_white"
                android:inputType="textPersonName"></EditText>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:backgroundTint="@color/Transparent_color"
                android:hint="@string/hint_lastName"
                android:textColor="@color/Primary_white"
                android:textColorHint="@color/Primary_white"
                android:inputType="textPersonName"></EditText>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:backgroundTint="@color/Transparent_color"
                android:hint="@string/hint_phone"
                android:textColor="@color/Primary_white"
                android:textColorHint="@color/Primary_white"
                android:inputType="phone"
                android:maxLength="9"></EditText>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20sp" />
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:orientation="horizontal">
               <TextView
                   android:layout_marginTop="10dp"
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:text="@string/hint_degree"
                   android:textColor="@color/Primary_white"
                   android:textSize="17sp"
                   android:layout_marginEnd="15dp"></TextView>
               <Spinner
                   android:id="@+id/spinnerGrado"
                   android:layout_width="match_parent"
                   android:layout_height="50sp"
                   android:prompt="@string/hint_degree"
                   android:outlineSpotShadowColor="@color/Primary_white"/>
           </LinearLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/hint_section"
                    android:textColor="@color/Primary_white"
                    android:textSize="17sp"></TextView>
                <Spinner
                    android:id="@+id/spinnerSection"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:prompt="@string/hint_degree"
                    android:outlineSpotShadowColor="@color/Primary_white"/>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:backgroundTint="@color/Transparent_color"
                android:hint="@string/hint_DNI"
                android:textColor="@color/Primary_white"
                android:textColorHint="@color/Primary_white"
                android:inputType="number"
                android:maxLength="8"></EditText>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20sp" />

            <EditText
                android:id="@+id/editTextFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:backgroundTint="@color/Transparent_color"
                android:hint="@string/hint_date_of_birth"
                android:textColor="@color/Primary_white"
                android:textColorHint="@color/Primary_white"
                android:focusable="false"
                android:clickable="true"></EditText>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20sp" />

            <Button
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="50dp"
                android:text="@string/action_bottom"
                android:textSize="18sp"></Button>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>