<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_primary_blue"
    android:padding="10dp"
    tools:context=".ui.Estudiante.AddActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="150dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/Transparent_color"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:textColorHint="@color/Primary_white"
                android:fontFamily="@font/montserrat"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:background="@drawable/background_text_transparent"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:drawablePadding="10sp"
                android:drawableLeft="@drawable/icon_student"></EditText>



            <EditText
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:backgroundTint="@color/Transparent_color"
                android:hint="@string/hint_lastName"
                android:inputType="textPersonName"
                android:textColorHint="@color/Primary_white"
                android:fontFamily="@font/montserrat"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:background="@drawable/background_text_transparent"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:drawablePadding="10sp"
                android:drawableLeft="@drawable/icon_docente"></EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:backgroundTint="@color/Transparent_color"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:maxLength="9"
                android:textColorHint="@color/Primary_white"
                android:fontFamily="@font/montserrat"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:background="@drawable/background_text_transparent"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:drawablePadding="10sp"
                android:drawableLeft="@drawable/icon_call"></EditText>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20sp" />
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:orientation="horizontal">
               <TextView
                   android:layout_marginTop="10dp"
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:text="@string/hint_degree"
                   android:textColor="@color/Primary_white"
                   android:layout_marginEnd="20dp"
                   android:fontFamily="@font/montserrat"
                   android:textSize="14sp"
                   android:padding="10sp"></TextView>
               <Spinner
                   android:id="@+id/spinnerGrado"
                   android:layout_width="match_parent"
                   android:layout_height="50sp"
                   android:prompt="@string/hint_degree"
                   android:outlineSpotShadowColor="@color/Primary_white"
                   android:background="@drawable/search_view_query_background"/>
           </LinearLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/hint_section"
                    android:textColor="@color/Primary_white"
                    android:fontFamily="@font/montserrat"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"
                    android:padding="10sp"></TextView>

                <Spinner
                    android:id="@+id/spinnerSection"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:outlineSpotShadowColor="@color/Primary_white"
                    android:prompt="@string/hint_degree"
                    android:background="@drawable/search_view_query_background"/>
            </LinearLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="10sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:backgroundTint="@color/Transparent_color"
                android:hint="@string/hint_DNI"
                android:inputType="number"
                android:maxLength="8"
                android:textColorHint="@color/Primary_white"
                android:fontFamily="@font/montserrat"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:background="@drawable/background_text_transparent"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:drawablePadding="10sp"
                android:drawableLeft="@drawable/icon_dni"></EditText>

            <EditText
                android:id="@+id/editTextFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:backgroundTint="@color/Transparent_color"
                android:hint="@string/hint_date_of_birth"
                android:focusable="false"
                android:clickable="true"
                android:textColorHint="@color/Primary_white"
                android:fontFamily="@font/montserrat"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:background="@drawable/background_text_transparent"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:drawablePadding="10sp"
                android:drawableLeft="@drawable/icon_date"></EditText>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20sp" />

            <Button
                android:id="@+id/button2"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/Secondary_brown"
                android:background="@drawable/background_yellow_buttom"
                android:text="Agregar"
                android:layout_marginHorizontal="50dp"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>